adding some css styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" media="handheld" href="css/mobile.css">
 
 </head>
 
@@ -44,9 +43,7 @@
   <!-- JavaScript -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script src="js/vendors/modernizr.js"></script>
+  <!--[if lt IE 7 ]> <script src="js/vendors/dd_belatedpng.js"></script> <![endif]-->
   
-  <!--[if lt IE 7 ]>
-    <script src="js/vendors/dd_belatedpng.js"></script>
-  <![endif]-->
 </body>
 </html>
