--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
   <meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 
-  
-
   <link rel="shortcut icon" href="">
 	<link rel="apple-touch-icon" href="">
 
@@ -42,6 +40,7 @@
 
   <!-- JavaScript -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js">
   <script src="js/vendors/modernizr.js"></script>
   <!--[if lt IE 7 ]> <script src="js/vendors/dd_belatedpng.js"></script> <![endif]-->
   
