--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
 
   <div id="container">
     <div id="header">
-      Hello There!
+      <div class="row">
+      	<div class="column grid_12"><p>12</p></div>
+      </div>
+
+      <div class="row">
+      	<div class="column grid_8">
+      	  <p>8</p>
+      		<div class="row">
+      			<div class="column grid_4"><p>4</p></div>
+      			<div class="column grid_4"><p>4</p></div>
+      		</div>
+      	</div>
+      	<div class="column grid_4"><p style="line-height: 222px;">4</p></div>
+      </div>
     </div>
     <div id="body">
 
