added css browser selector and a font directory

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 
   <!-- JavaScript -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js">
+  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
   <script src="js/vendors/modernizr.js"></script>
+  <script src="js/vendors/css_browser_selector.js"></script>
+  
   <!--[if lt IE 7 ]> <script src="js/vendors/dd_belatedpng.js"></script> <![endif]-->
   
 </body>
