--- a/sample.html
+++ b/sample.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"> <![endif]-->
 
-  <title></title>
+  <title>SAMPLE</title>
 
   <meta name="description" content="">
   <meta name="author" content="">
@@ -28,10 +28,215 @@
 
   <div id="container">
     <div id="header">
-      Hello There!
-    </div>
-    <div id="body">
 
+    </div>
+    <div id="body" class="row">
+          <!-- demo content lovingly lifted from the azbuka project 
+               http://code.google.com/p/azbuka/ -->
+
+          <h1>Title H1 Heading</h1>
+          <hr />
+          <h3>Level 3 Heading</h3>
+          <p>Lorem ipsum &mdash; <em>emphasised text</em> dolor sit amet, &mdash; <strong>strong text</strong> 
+          consectetur adipisicing elit, &mdash; <abbr title="ABR">abbreviated text</abbr> sed do eiusmod tempor 
+           incididunt ut labore et dolore magna aliqua. Ut 
+          &mdash; <q>quoted text</q> enim ad minim veniam, quis nostrud exercitation &mdash; <a href="/">link text</a> 
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
+          &mdash; <ins>inserted text</ins> irure dolor in reprehenderit in voluptate velit esse cillum 
+          dolore eu fugiat nulla pariatur. Excepteur sint occaecat &mdash; <code>code text</code> cupidatat 
+          non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+          <p>
+          Suspendisse rhoncus, est ac sollicitudin viverra, leo orci sagittis massa, sed condimentum 
+          &mdash; <acronym title="ACR">acronym text</acronym> est tortor a lectus. Curabitur porta feugiat ullamcorper. 
+          Integer lacinia mi id odio faucibus eget tincidunt nisl iaculis. Nam adipiscing hendrerit turpis, 
+          et porttitor felis sollicitudin et. Donec dictum massa ac neque accumsan tempor. Cras aliquam, ipsum sit amet laoreet 
+          hendrerit, purus &mdash; <del>deleted text</del> sapien convallis dui, et porta leo ipsum ac nunc. Nullam ornare porta dui 
+          ac semper. Cras aliquam laoreet hendrerit. Quisque vulputate dolor eget mi porta vel porta nisl pretium. Vivamus 
+          non leo magna, quis imperdiet risus. Morbi tempor risus placerat tellus imperdiet fringilla. 
+          </p>
+
+          <blockquote>
+          <p>blockquote I am not one who was born in the possession of knowledge; I am one who is fond of antiquity, and earnest in seeking it there.</p>
+          </blockquote>
+
+          <p><cite><a href="/">Confucius, The Confucian Analects</a></cite>,  (551 BC - 479 BC)</p>
+
+          <h3>Level 3 Heading</h3>
+
+          <p>Extended paragraph. <a href="">Lorem ipsum</a> dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+          <h4>H4: Ordered lists</h4>
+          <ol>
+          <li>Unus</li>
+          <li>Duo</li>
+          <li>Tres</li>
+          <li>Quattuor</li>
+          </ol>
+
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+          anim id est laborum.</p>
+
+          <h3>Header 3</h3>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua.</p>
+
+           <h4>H4: Unordered lists</h4>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet</li>
+                  <li>Consectetur adipisicing elit</li>
+                  <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+                  <li>Ut enim ad minim veniam</li>
+                </ul>
+          <p>Lorem ipsum dolor sit amet,consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua.</p>
+
+          <h4>H4: Pre Code</h4>
+          <pre><code>body { font:0.8125em/1.618 Arial, sans-serif; 
+          background-color:#fff;  
+          color:#111;
+          }</code></pre>
+
+          <h4>H4: Definition lists</h4>
+          <dl>
+          <dt>dolor sit amet</dt>
+          <dd>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+          commodo consequat.
+          </dd>
+          <dt>Lorem ipsum dolor sit amet</dt>
+          <dd>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+          commodo consequat.
+          </dd>
+          </dl>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua.</p>
+          <h4>Ordered list</h4>
+          <ol>
+          							<li>List item</li>
+          							<li>List item</li>
+          							<li>List item
+          								<ol>
+          									<li>List item level 2</li>
+          									<li>List item level 2
+          										<ol>
+          											<li>List item level 3</li>
+          											<li>List item level 3</li>
+          										</ol>
+          									</li>
+          								</ol>
+          							</li>
+          						</ol>						
+          						<h4>Unordered list</h4>
+          						<ul>
+          							<li>List item 01</li>
+          							<li>List item 02</li>
+          							<li>List item 03
+          								<ul>
+          									<li>List item level 2</li>
+          									<li>List item level 2
+          										<ul>
+          											<li>List item level 3</li>
+          											<li>List item level 3</li>
+          										</ul>
+          									</li>
+
+          								</ul>
+          							</li>
+          						</ul>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua.</p>
+
+
+               <h4>Tables</h4>
+                <table summary="Jimi Hendrix albums">
+          	  <caption>Jimi Hendrix - albums</caption>
+          	  <thead>
+                  <tr>
+                    <th>Album</th>
+                    <th>Year</th>
+                    <th>Price</th>
+                  </tr>
+          		</thead>
+          			  <tfoot>
+                  <tr>
+                    <td>Album</td>
+                    <td>Year</td>
+                    <td>Price</td>
+                  </tr>
+          		</tfoot>
+          		<tbody>
+                  <tr>
+                    <td>Are You Experienced </td>
+                    <td>1967</td>
+                    <td>$10.00</td>
+                  </tr>
+                  <tr>
+                    <td>Axis: Bold as Love</td>
+                    <td>1967</td>
+                    <td>$12.00</td>
+                  </tr>
+          		 <tr>
+                    <td>Electric Ladyland</td>
+                    <td>1968</td>
+                    <td>$10.00</td>
+                  </tr>
+                  <tr>
+                    <td>Band of Gypsys</td>
+                    <td>1970</td>
+                    <td>$12.00</td>
+                  </tr>
+          				<tbody>
+                </table>
+                
+                
+          	  <p>
+          I am <a href="http://devkick.com/lab/tripoli/sample.php?abc123">the a tag</a> example<br>
+
+          I am <abbr title="test">the abbr tag</abbr> example<br>
+
+          I am <acronym>the acronym tag</acronym> example<br>
+          I am <b>the b tag</b> example<br>
+          I am <big>the big tag</big> example<br>
+
+          I am <cite>the cite tag</cite> example<br>
+
+          I am <code>the code tag</code> example<br>
+          I am <del>the del tag</del> example<br>
+          I am <dfn>the dfn tag</dfn> example<br>
+
+          I am <em>the em tag</em> example<br>
+
+          I am <font face="verdana">the font tag</font> example<br>
+          I am <i>the i tag</i> example<br>
+          I am <ins>the ins tag</ins> example<br>
+
+          I am <kbd>the kbd tag</kbd> example<br>
+
+          I am <q>the q tag <q>inside</q> a q tag</q> example<br>
+          I am <s>the s tag</s> example<br>
+          I am <samp>the samp tag</samp> example<br>
+
+          I am <small>the small tag</small> example<br>
+          I am <span>the span tag</span> example<br>
+          I am <strike>the strike tag</strike> example<br>
+          I am <strong>the strong tag</strong> example<br>
+
+          I am <sub>the sub tag</sub> example<br>
+          I am <sup>the sup tag</sup> example<br>
+          I am <tt>the tt tag</tt> example<br>
+          I am <var>the var tag</var> example<br>
+
+          I am <u>the u tag</u> example
+          </p>
+          <address>Address: somewhere, World</address>
     </div>
     <div id="footer">
 
@@ -40,7 +245,7 @@
 
   <!-- JavaScript -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js">
+  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
   <script src="js/vendors/modernizr.js"></script>
   <!--[if lt IE 7 ]> <script src="js/vendors/dd_belatedpng.js"></script> <![endif]-->
   
