added formtastic and made small changed here and there

--- a/sample.html
+++ b/sample.html
@@ -197,49 +197,35 @@
                 </table>
                 
                 
-          	  <p>
-          I am <a href="http://devkick.com/lab/tripoli/sample.php?abc123">the a tag</a> example<br>
-
-          I am <abbr title="test">the abbr tag</abbr> example<br>
-
-          I am <acronym>the acronym tag</acronym> example<br>
-          I am <b>the b tag</b> example<br>
-          I am <big>the big tag</big> example<br>
-
-          I am <cite>the cite tag</cite> example<br>
-
-          I am <code>the code tag</code> example<br>
-          I am <del>the del tag</del> example<br>
-          I am <dfn>the dfn tag</dfn> example<br>
-
-          I am <em>the em tag</em> example<br>
-
-          I am <font face="verdana">the font tag</font> example<br>
-          I am <i>the i tag</i> example<br>
-          I am <ins>the ins tag</ins> example<br>
-
-          I am <kbd>the kbd tag</kbd> example<br>
-
-          I am <q>the q tag <q>inside</q> a q tag</q> example<br>
-          I am <s>the s tag</s> example<br>
-          I am <samp>the samp tag</samp> example<br>
-
-          I am <small>the small tag</small> example<br>
-          I am <span>the span tag</span> example<br>
-          I am <strike>the strike tag</strike> example<br>
-          I am <strong>the strong tag</strong> example<br>
-
-          I am <sub>the sub tag</sub> example<br>
-          I am <sup>the sup tag</sup> example<br>
-          I am <tt>the tt tag</tt> example<br>
-          I am <var>the var tag</var> example<br>
-
-          I am <u>the u tag</u> example
+          <p>
+            I am <a href="http://devkick.com/lab/tripoli/sample.php?abc123">the a tag</a> example<br>
+            I am <abbr title="test">the abbr tag</abbr> example<br>
+            I am <tt>the tt tag</tt> example<br>
+            I am <code>the code tag</code> example<br>
+            I am <del>the del tag</del> example<br>
+            I am <ins>the ins tag</ins> example<br>
+            I am <em>the em tag</em> example<br>
+            I am <strong>the strong tag</strong> example<br>
+            I am <sub>the sub tag</sub> example<br>
+            I am <sup>the sup tag</sup> example<br>
           </p>
           <address>Address: somewhere, World</address>
     </div>
     <div id="footer">
-
+      <table  summary="This is a chart of year-end returns for 2005.">
+        <thead>
+          <tr>
+            <th scope="col">Table header 1</th>
+            <th scope="col">Table header 2</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Table data 1</td>
+            <td>Table data 2</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 
