--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
+  
+  <!-- http://www.phpied.com/conditional-comments-block-downloads/ -->
+  <!--[if IE]><![endif]-->
+  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->     
   <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"> <![endif]-->
 
   <title></title>
@@ -10,11 +14,11 @@
   <meta name="author" content="">
   <meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+	<meta name="robots" content="index, follow">
 
   <link rel="shortcut icon" href="">
 	<link rel="apple-touch-icon" href="">
 
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -27,32 +31,29 @@
 <!--[if !IE]><!--> <body>         <!--<![endif]-->
 
   <div id="container">
-    <div id="header">
-      <div class="row">
-      	<div class="column grid_12"><p>12</p></div>
-      </div>
-
-      <div class="row">
-      	<div class="column grid_8">
-      	  <p>8</p>
-      		<div class="row">
-      			<div class="column grid_4"><p>4</p></div>
-      			<div class="column grid_4"><p>4</p></div>
-      		</div>
-      	</div>
-      	<div class="column grid_4"><p style="line-height: 222px;">4</p></div>
-      </div>
+    <div id="header row">
+      <div class="column grid_12"><p>Header 12 col</p></div>
     </div>
-    <div id="body">
-
+    <div id="content row">
+    	<div class="column grid_8">
+    	  <p>this is 8 col</p>
+    		<div class="row">
+    			<div class="column grid_4"><p>4 col</p></div>
+    			<div class="column grid_4"><p>4 col</p></div>
+    		</div>
+    	</div>
+    	<div class="column grid_4"><p style="line-height: 222px;">4 col side bar</p></div>          
     </div>
-    <div id="footer">
-
+    <div id="footer row">
+      <div class="column grid_12"><p>footer</p></div>
     </div>
   </div>
 
-  <!-- JavaScript -->
+  <!-- JavaScript -->  
+  <!-- Grab Google CDN's jQuery. fall back to local if neccessary -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="js/vendors/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
+  
   <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
   <script src="js/vendors/modernizr.js"></script>
   <script src="js/vendors/css_browser_selector.js"></script>
